@@ -43,6 +43,7 @@
                   <li><a href="#tab_firewall" data-toggle="tab">{% translate "Firewall" %}</a></li>
                 </ul>
                 <div class="tab-content">
+                  <br/>
                   <div class="tab-pane active" id="tab_general">
                     <div class="row">
                       <div class="col-md-12">
